2005-01-16  Panagiotis Issaris <panagiotis.issaris@mech.kuleuven.ac.be>

	* testsuite/klatency/latency-module.c: Make the task period user-
	modifiable through a module parameter.
	
2005-01-16  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/registry.c (__registry_pkg_cleanup): Remove registry
	class entries on-the-fly.

	* fusion: Use more explicit naming for syscall exec bits:
	__xn_flag_* => __xn_exec_*, __xn_flag_regular =>
	__xn_exec_primary, __xn_flag_anycall => __xn_exec_any.

	* testsuite/latency/latency.c, testsuite/cruncher/cruncher.c: Trap
	SIGHUP.

2005-01-15  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/syscall.c (__rt_bind_helper): Issue non-blocking
	request when running inside the Linux domain.

2005-01-15  Max Krasnyansky <maxk@qualcomm.com>

	* skins/rtai/syscalls.c: Export rt_sem_broadcast().
	
2005-01-15  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/shadow.c (xnshadow_relax, xnshadow_harden): Do not stall
	the high stage when transitioning; this is definitely useless and
	might induce additional jittery under high vm pressure
	(e.g. __adeos_schedule_back_root() running unpreemptible).

	* nucleus/shadow.c (engage_irq_shield, disengage_irq_shield): Do
	not lock hw IRQs when operating; this is useless too, and might
	induce jittery when unstalling the shield stage.

2005-01-14  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/shadow.c (rtai_sysentry): Return -EPERM upon calling
	context error.

	* skin/rtai: Fix the mess in the context-checking code: normalize
	error returns to -EPERM (instead of -EACCES), and stop using
	xnpod_check_context().

	* include/nucleus/pod.h (xnpod_unblockable_p): Replace
	xnpod_pendable_p() with an opposite test encompassing the root
	thread.

2005-01-13  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/heap.c (rt_heap_alloc): Fix shared memory case, and
	prevent non-task callers asking for blocking requests from causing
	the nucleus to panic.

	* skins/rtai: Export the registry contents through the /proc