@@ -2811,85 +2811,85 @@ int __rt_call_not_available (struct task_struct *curr, struct pt_regs *regs) {
 }
 
 static xnsysent_t __systab[] = {
-    [__rtai_task_create ] = { &__rt_task_create, __xn_flag_init },
-    [__rtai_task_bind ] = { &__rt_task_bind, __xn_flag_regular },
-    [__rtai_task_start ] = { &__rt_task_start, __xn_flag_anycall },
-    [__rtai_task_suspend ] = { &__rt_task_suspend, __xn_flag_regular },
-    [__rtai_task_resume ] = { &__rt_task_resume, __xn_flag_anycall },
-    [__rtai_task_delete ] = { &__rt_task_delete, __xn_flag_regular },
-    [__rtai_task_yield ] = { &__rt_task_yield, __xn_flag_regular },
-    [__rtai_task_set_periodic ] = { &__rt_task_set_periodic, __xn_flag_regular },
-    [__rtai_task_wait_period ] = { &__rt_task_wait_period, __xn_flag_regular },
-    [__rtai_task_set_priority ] = { &__rt_task_set_priority, __xn_flag_anycall },
-    [__rtai_task_sleep ] = { &__rt_task_sleep, __xn_flag_regular },
-    [__rtai_task_sleep_until ] = { &__rt_task_sleep_until, __xn_flag_regular },
-    [__rtai_task_unblock ] = { &__rt_task_unblock, __xn_flag_anycall },
-    [__rtai_task_inquire ] = { &__rt_task_inquire, __xn_flag_anycall },
-    [__rtai_task_notify ] = { &__rt_task_notify, __xn_flag_anycall },
-    [__rtai_task_set_mode ] = { &__rt_task_set_mode, __xn_flag_regular },
-    [__rtai_task_self ] = { &__rt_task_self, __xn_flag_anycall },
-    [__rtai_task_slice ] = { &__rt_task_slice, __xn_flag_anycall },
-    [__rtai_timer_start ] = { &__rt_timer_start, __xn_flag_anycall },
-    [__rtai_timer_stop ] = { &__rt_timer_stop, __xn_flag_anycall },
-    [__rtai_timer_read ] = { &__rt_timer_read, __xn_flag_anycall },
-    [__rtai_timer_tsc ] = { &__rt_timer_tsc, __xn_flag_anycall },
-    [__rtai_timer_ns2ticks ] = { &__rt_timer_ns2ticks, __xn_flag_anycall },
-    [__rtai_timer_ticks2ns ] = { &__rt_timer_ticks2ns, __xn_flag_anycall },
-    [__rtai_timer_inquire ] = { &__rt_timer_inquire, __xn_flag_anycall },
-    [__rtai_sem_create ] = { &__rt_sem_create, __xn_flag_anycall },
-    [__rtai_sem_bind ] = { &__rt_sem_bind, __xn_flag_regular },
-    [__rtai_sem_delete ] = { &__rt_sem_delete, __xn_flag_anycall },
-    [__rtai_sem_p ] = { &__rt_sem_p, __xn_flag_regular },
-    [__rtai_sem_v ] = { &__rt_sem_v, __xn_flag_anycall },
-    [__rtai_sem_broadcast ] = { &__rt_sem_broadcast, __xn_flag_anycall },
-    [__rtai_sem_inquire ] = { &__rt_sem_inquire, __xn_flag_anycall },
-    [__rtai_event_create ] = { &__rt_event_create, __xn_flag_anycall },
-    [__rtai_event_bind ] = { &__rt_event_bind, __xn_flag_regular },
-    [__rtai_event_delete ] = { &__rt_event_delete, __xn_flag_anycall },
-    [__rtai_event_wait ] = { &__rt_event_wait, __xn_flag_regular },
-    [__rtai_event_signal ] = { &__rt_event_signal, __xn_flag_anycall },
-    [__rtai_event_clear ] = { &__rt_event_clear, __xn_flag_anycall },
-    [__rtai_event_inquire ] = { &__rt_event_inquire, __xn_flag_anycall },
-    [__rtai_mutex_create ] = { &__rt_mutex_create, __xn_flag_anycall },
-    [__rtai_mutex_bind ] = { &__rt_mutex_bind, __xn_flag_regular },
-    [__rtai_mutex_delete ] = { &__rt_mutex_delete, __xn_flag_anycall },
-    [__rtai_mutex_lock ] = { &__rt_mutex_lock, __xn_flag_regular },
-    [__rtai_mutex_unlock ] = { &__rt_mutex_unlock, __xn_flag_shadow },
-    [__rtai_mutex_inquire ] = { &__rt_mutex_inquire, __xn_flag_anycall },
-    [__rtai_cond_create ] = { &__rt_cond_create, __xn_flag_anycall },
-    [__rtai_cond_bind ] = { &__rt_cond_bind, __xn_flag_regular },
-    [__rtai_cond_delete ] = { &__rt_cond_delete, __xn_flag_anycall },
-    [__rtai_cond_wait ] = { &__rt_cond_wait, __xn_flag_regular },
-    [__rtai_cond_signal ] = { &__rt_cond_signal, __xn_flag_anycall },
-    [__rtai_cond_broadcast ] = { &__rt_cond_broadcast, __xn_flag_anycall },
-    [__rtai_cond_inquire ] = { &__rt_cond_inquire, __xn_flag_anycall },
-    [__rtai_queue_create ] = { &__rt_queue_create, __xn_flag_lostage },
-    [__rtai_queue_bind ] = { &__rt_queue_bind, __xn_flag_regular },
-    [__rtai_queue_delete ] = { &__rt_queue_delete, __xn_flag_anycall },
-    [__rtai_queue_alloc ] = { &__rt_queue_alloc, __xn_flag_anycall },
-    [__rtai_queue_free ] = { &__rt_queue_free, __xn_flag_anycall },
-    [__rtai_queue_send ] = { &__rt_queue_send, __xn_flag_anycall },
-    [__rtai_queue_recv ] = { &__rt_queue_recv, __xn_flag_regular },
-    [__rtai_queue_inquire ] = { &__rt_queue_inquire, __xn_flag_anycall },
-    [__rtai_heap_create ] = { &__rt_heap_create, __xn_flag_lostage },
-    [__rtai_heap_bind ] = { &__rt_heap_bind, __xn_flag_regular },
-    [__rtai_heap_delete ] = { &__rt_heap_delete, __xn_flag_anycall },
-    [__rtai_heap_alloc ] = { &__rt_heap_alloc, __xn_flag_regular },
-    [__rtai_heap_free ] = { &__rt_heap_free, __xn_flag_anycall },
-    [__rtai_heap_inquire ] = { &__rt_heap_inquire, __xn_flag_anycall },
-    [__rtai_alarm_create ] = { &__rt_alarm_create, __xn_flag_anycall },
-    [__rtai_alarm_delete ] = { &__rt_alarm_delete, __xn_flag_anycall },
-    [__rtai_alarm_start ] = { &__rt_alarm_start, __xn_flag_anycall },
-    [__rtai_alarm_stop ] = { &__rt_alarm_stop, __xn_flag_anycall },
-    [__rtai_alarm_wait ] = { &__rt_alarm_wait, __xn_flag_regular },
-    [__rtai_alarm_inquire ] = { &__rt_alarm_inquire, __xn_flag_anycall },
-    [__rtai_intr_create ] = { &__rt_intr_create, __xn_flag_anycall },
-    [__rtai_intr_bind ] = { &__rt_intr_bind, __xn_flag_regular },
-    [__rtai_intr_delete ] = { &__rt_intr_delete, __xn_flag_anycall },
-    [__rtai_intr_wait ] = { &__rt_intr_wait, __xn_flag_regular },
-    [__rtai_intr_enable ] = { &__rt_intr_enable, __xn_flag_anycall },
-    [__rtai_intr_disable ] = { &__rt_intr_disable, __xn_flag_anycall },
-    [__rtai_intr_inquire ] = { &__rt_intr_inquire, __xn_flag_anycall },
+    [__rtai_task_create ] = { &__rt_task_create, __xn_exec_init },
+    [__rtai_task_bind ] = { &__rt_task_bind, __xn_exec_primary },
+    [__rtai_task_start ] = { &__rt_task_start, __xn_exec_any },
+    [__rtai_task_suspend ] = { &__rt_task_suspend, __xn_exec_primary },
+    [__rtai_task_resume ] = { &__rt_task_resume, __xn_exec_any },
+    [__rtai_task_delete ] = { &__rt_task_delete, __xn_exec_primary },
+    [__rtai_task_yield ] = { &__rt_task_yield, __xn_exec_primary },
+    [__rtai_task_set_periodic ] = { &__rt_task_set_periodic, __xn_exec_primary },
+    [__rtai_task_wait_period ] = { &__rt_task_wait_period, __xn_exec_primary },
+    [__rtai_task_set_priority ] = { &__rt_task_set_priority, __xn_exec_any },
+    [__rtai_task_sleep ] = { &__rt_task_sleep, __xn_exec_primary },
+    [__rtai_task_sleep_until ] = { &__rt_task_sleep_until, __xn_exec_primary },
+    [__rtai_task_unblock ] = { &__rt_task_unblock, __xn_exec_any },
+    [__rtai_task_inquire ] = { &__rt_task_inquire, __xn_exec_any },
+    [__rtai_task_notify ] = { &__rt_task_notify, __xn_exec_any },
+    [__rtai_task_set_mode ] = { &__rt_task_set_mode, __xn_exec_primary },
+    [__rtai_task_self ] = { &__rt_task_self, __xn_exec_any },
+    [__rtai_task_slice ] = { &__rt_task_slice, __xn_exec_any },
+    [__rtai_timer_start ] = { &__rt_timer_start, __xn_exec_any },
+    [__rtai_timer_stop ] = { &__rt_timer_stop, __xn_exec_any },
+    [__rtai_timer_read ] = { &__rt_timer_read, __xn_exec_any },
+    [__rtai_timer_tsc ] = { &__rt_timer_tsc, __xn_exec_any },
+    [__rtai_timer_ns2ticks ] = { &__rt_timer_ns2ticks, __xn_exec_any },
+    [__rtai_timer_ticks2ns ] = { &__rt_timer_ticks2ns, __xn_exec_any },
+    [__rtai_timer_inquire ] = { &__rt_timer_inquire, __xn_exec_any },
+    [__rtai_sem_create ] = { &__rt_sem_create, __xn_exec_any },
+    [__rtai_sem_bind ] = { &__rt_sem_bind, __xn_exec_primary },
+    [__rtai_sem_delete ] = { &__rt_sem_delete, __xn_exec_any },
+    [__rtai_sem_p ] = { &__rt_sem_p, __xn_exec_primary },
+    [__rtai_sem_v ] = { &__rt_sem_v, __xn_exec_any },
+    [__rtai_sem_broadcast ] = { &__rt_sem_broadcast, __xn_exec_any },
+    [__rtai_sem_inquire ] = { &__rt_sem_inquire, __xn_exec_any },
+    [__rtai_event_create ] = { &__rt_event_create, __xn_exec_any },
+    [__rtai_event_bind ] = { &__rt_event_bind, __xn_exec_primary },
+    [__rtai_event_delete ] = { &__rt_event_delete, __xn_exec_any },
+    [__rtai_event_wait ] = { &__rt_event_wait, __xn_exec_primary },
+    [__rtai_event_signal ] = { &__rt_event_signal, __xn_exec_any },
+    [__rtai_event_clear ] = { &__rt_event_clear, __xn_exec_any },
+    [__rtai_event_inquire ] = { &__rt_event_inquire, __xn_exec_any },
+    [__rtai_mutex_create ] = { &__rt_mutex_create, __xn_exec_any },
+    [__rtai_mutex_bind ] = { &__rt_mutex_bind, __xn_exec_primary },
+    [__rtai_mutex_delete ] = { &__rt_mutex_delete, __xn_exec_any },
+    [__rtai_mutex_lock ] = { &__rt_mutex_lock, __xn_exec_primary },
+    [__rtai_mutex_unlock ] = { &__rt_mutex_unlock, __xn_exec_shadow },
+    [__rtai_mutex_inquire ] = { &__rt_mutex_inquire, __xn_exec_any },
+    [__rtai_cond_create ] = { &__rt_cond_create, __xn_exec_any },
+    [__rtai_cond_bind ] = { &__rt_cond_bind, __xn_exec_primary },
+    [__rtai_cond_delete ] = { &__rt_cond_delete, __xn_exec_any },
+    [__rtai_cond_wait ] = { &__rt_cond_wait, __xn_exec_primary },
+    [__rtai_cond_signal ] = { &__rt_cond_signal, __xn_exec_any },
+    [__rtai_cond_broadcast ] = { &__rt_cond_broadcast, __xn_exec_any },
+    [__rtai_cond_inquire ] = { &__rt_cond_inquire, __xn_exec_any },
+    [__rtai_queue_create ] = { &__rt_queue_create, __xn_exec_lostage },
+    [__rtai_queue_bind ] = { &__rt_queue_bind, __xn_exec_primary },
+    [__rtai_queue_delete ] = { &__rt_queue_delete, __xn_exec_any },
+    [__rtai_queue_alloc ] = { &__rt_queue_alloc, __xn_exec_any },
+    [__rtai_queue_free ] = { &__rt_queue_free, __xn_exec_any },
+    [__rtai_queue_send ] = { &__rt_queue_send, __xn_exec_any },
+    [__rtai_queue_recv ] = { &__rt_queue_recv, __xn_exec_primary },
+    [__rtai_queue_inquire ] = { &__rt_queue_inquire, __xn_exec_any },
+    [__rtai_heap_create ] = { &__rt_heap_create, __xn_exec_lostage },
+    [__rtai_heap_bind ] = { &__rt_heap_bind, __xn_exec_primary },
+    [__rtai_heap_delete ] = { &__rt_heap_delete, __xn_exec_any },
+    [__rtai_heap_alloc ] = { &__rt_heap_alloc, __xn_exec_primary },
+    [__rtai_heap_free ] = { &__rt_heap_free, __xn_exec_any },
+    [__rtai_heap_inquire ] = { &__rt_heap_inquire, __xn_exec_any },
+    [__rtai_alarm_create ] = { &__rt_alarm_create, __xn_exec_any },
+    [__rtai_alarm_delete ] = { &__rt_alarm_delete, __xn_exec_any },
+    [__rtai_alarm_start ] = { &__rt_alarm_start, __xn_exec_any },
+    [__rtai_alarm_stop ] = { &__rt_alarm_stop, __xn_exec_any },
+    [__rtai_alarm_wait ] = { &__rt_alarm_wait, __xn_exec_primary },
+    [__rtai_alarm_inquire ] = { &__rt_alarm_inquire, __xn_exec_any },
+    [__rtai_intr_create ] = { &__rt_intr_create, __xn_exec_any },
+    [__rtai_intr_bind ] = { &__rt_intr_bind, __xn_exec_primary },
+    [__rtai_intr_delete ] = { &__rt_intr_delete, __xn_exec_any },
+    [__rtai_intr_wait ] = { &__rt_intr_wait, __xn_exec_primary },
+    [__rtai_intr_enable ] = { &__rt_intr_enable, __xn_exec_any },
+    [__rtai_intr_disable ] = { &__rt_intr_disable, __xn_exec_any },
+    [__rtai_intr_inquire ] = { &__rt_intr_inquire, __xn_exec_any },
 };
 
 static void __shadow_delete_hook (xnthread_t *thread)
